# mod-player

./: .gitignore  CMakeLists.txt  crossbuild-win-releases.sh  demo-01.pro  main.cpp  mod_class.cpp  mod_class.h  readme.md
doc/: mod_file_spec1.txt  mod_file_spec2.txt  mod_file_spec3.txt
mods/: Untitled.mod  alf.mod  axel_f_-_dj_metune.mod  chiptune.mod  congratulations!.mod  connect_14400.mod  connect_14400l.mod  down_to_the_groove.mod  dream_vs_nightmare.mod  mentald2.mod  pinball dreams - intromusic.mod  random_voice_-_monday.mod  shock01.mod  test.mod  test_tremolo_effekt_x07.mod  test_tune_effekt_x03.mod  triumph_intro.mod  trnsatln.mod  virgill_-_my_lucky_number.mod  woutervl_bid.mod
mods/buggy/: eternity.mod  omega.mod
src/: level_meter_class.cpp  level_meter_class.h  low_pass_filter.cpp  low_pass_filter.h  main.cpp  mod_class.cpp  mod_class.h
